# Model-Predictive-Control

./: README.md  main.py  pyproject.toml  setup.yaml
Constrained_QDMC/: Final constrained QDMC  .ipynb
LSQ_DMC/: LSQ DMC.ipynb
dev/: Final constrained QDMC  .ipynb  _Final Robust constrained QDMC.ipynb
frontend/: application.py
frontend/.streamlit/: config.yaml
mpc_core/: construct_controller.py  helpers.py  setup_mpc.py  simulation.py
